--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@popperjs/core": "^2.9.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^3.1.5"
+    "idb": "^6.1.2",
+    "vue": "^3.1.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
